--- a/front-end/index.html
+++ b/front-end/index.html
@@ -3,30 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IndicaPacas</title>
-    <link rel="stylesheet" type="text/css" href="home.css" media="screen" />
+    <title>IndicoPacas</title>
+    <link rel="stylesheet" type="text/css" href="homegpt.css" media="screen" />
 </head>
 
 <body>
     <header>
         <nav>
-            <a class="logo" href="">Inidica Pacas</a>
+            <a class="logo" href="/">Indica Pacas</a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-            <li><a href="/">Início</a></li>
-            <li><a href="/">Sobre</a></li>
-            <li><a href="/">Contato</a></li>
+                <li><a href="/">Início</a></li>
+                <li><a href="/">Sobre</a></li>
+                <li><a href="/">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <script src="mobile-navbar.js"> </script>
+        <h1>Bem-vindo ao IndicoPacas</h1>
+        <p>Descubra as melhores indicações para tudo o que você precisa.</p>
     </main>
-   
-</body>
 
+    <script src="mobile-navbargpt.js"></script>
+</body>
 </html>
+
